--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
             </li>
           </ul>
         </nav>
+        <button class="mobile-menu-open-btn" type="button">
+          <svg
+            class="mobile-menu-open-btn-icon"
+            width="24"
+            height="24"
+            aria-label="mobile menu open icon"
+          >
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </button>
         <address class="contacts">
           <ul class="contacts-list">
             <li class="contacts-list-item">
@@ -127,6 +137,10 @@
           <ul class="our-team-list">
             <li class="our-team-list-item">
               <img
+                srcset="
+                  ./images/mark-guerrero-product-designer.jpg   1x,
+                  ./images/mark-querrero-product-desiner@2x.jpg 2x
+                "
                 src="./images/mark-guerrero-product-designer.jpg"
                 width="264"
                 height="260"
@@ -167,6 +181,10 @@
             </li>
             <li class="our-team-list-item">
               <img
+                srcset="
+                  ./images/tom-ford-frontend-developer.jpg    1x,
+                  ./images/tom-ford-frontend-developer@2x.jpg 2x
+                "
                 src="./images/tom-ford-frontend-developer.jpg"
                 width="264"
                 height="260"
@@ -207,6 +225,10 @@
             </li>
             <li class="our-team-list-item">
               <img
+                srcset="
+                  ./images/camila-garcia-marketing.jpg    1x,
+                  ./images/camila-garcia-marketing@2x.jpg 2x
+                "
                 src="./images/camila-garcia-marketing.jpg"
                 width="264"
                 height="260"
@@ -247,6 +269,10 @@
             </li>
             <li class="our-team-list-item">
               <img
+                srcset="
+                  ./images/daniel-wilson-ui-designer.jpg    1x,
+                  ./images/daniel-wilson-ui-designer@2x.jpg 2x
+                "
                 src="./images/daniel-wilson-ui-designer.jpg"
                 width="264"
                 height="260"
@@ -295,12 +321,33 @@
           <ul class="our-portfolio-list">
             <li class="our-portfolio-list-item">
               <div class="our-portfolio-images">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="demo-banking-mobole-app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/banking-app-desktop.jpg    1x,
+                      ./images/banking-app-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/banking-app-tablet.jpg    1x,
+                      ./images/banking-app-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/banking-app-mobile.jpg    1x,
+                      ./images/banking-app-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/banking-app-mobile.jpg"
+                    alt="demo-banking-mobile-app"
+                  />
+                </picture>
                 <p class="our-portfolio-images-top">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -314,12 +361,33 @@
             </li>
             <li class="our-portfolio-list-item">
               <div class="our-portfolio-images">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="demo-cashless-payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/cashless-payment-desktop.jpg    1x,
+                      ./images/cashless-payment-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/cashless-payment-tablet.jpg    1x,
+                      ./images/cashless-payment-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/cashless-payment-mobile.jpg    1x,
+                      ./images/cashless-payment-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/cashless-payment-mobile.jpg"
+                    alt="demo-cashless-payment"
+                  />
+                </picture>
                 <p class="our-portfolio-images-top">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -333,12 +401,33 @@
             </li>
             <li class="our-portfolio-list-item">
               <div class="our-portfolio-images">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="demo-maditation-app-phone-pc"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/meditation-app-desktop.jpg    1x,
+                      ./images/meditation-app-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/meditation-app-tablet.jpg    1x,
+                      ./images/meditation-app-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/meditation-app-mobile.jpg    1x,
+                      ./images/meditation-app-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/meditation-app-mobile.jpg"
+                    alt="demo-maditation-app-phone-pc"
+                  />
+                </picture>
                 <p class="our-portfolio-images-top">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -352,12 +441,33 @@
             </li>
             <li class="our-portfolio-list-item">
               <div class="our-portfolio-images">
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="the-man-is-driving"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/taxi-service-desktop.jpg    1x,
+                      ./images/taxi-service-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/taxi-service-tablet.jpg    1x,
+                      ./images/taxi-service-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/taxi-service-mobile.jpg    1x,
+                      ./images/taxi-service-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/taxi-service-mobile.jpg"
+                    alt="the-man-is-driving"
+                  />
+                </picture>
                 <p class="our-portfolio-images-top">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -371,12 +481,33 @@
             </li>
             <li class="our-portfolio-list-item">
               <div class="our-portfolio-images">
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="phone-with-moon-screensaver"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/screen-illustrations-desktop.jpg    1x,
+                      ./images/screen-illustrations-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/screen-illustrations-tablet.jpg    1x,
+                      ./images/screen-illustrations-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/screen-illustrations-mobile.jpg    1x,
+                      ./images/screen-illustrations-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/screen-illustrations-mobile.jpg"
+                    alt="phone-with-moon-screensaver"
+                  />
+                </picture>
                 <p class="our-portfolio-images-top">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -390,12 +521,33 @@
             </li>
             <li class="our-portfolio-list-item">
               <div class="our-portfolio-images">
-                <img
-                  src="./images/oline-courses.jpg"
-                  alt="the-woman-looks-at-the-phone"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/online-courses-desktop.jpg    1x,
+                      ./images/online-courses-desktop@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/online-courses-tablet.jpg    1x,
+                      ./images/online-courses-tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/online-courses-mobile.jpg    1x,
+                      ./images/online-courses-mobile@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/online-courses-mobile.jpg"
+                    alt="the-woman-looks-at-the-phone"
+                  />
+                </picture>
                 <p class="our-portfolio-images-top">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -478,7 +630,8 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <!-- Modal Window -->
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -603,6 +756,85 @@
           </div>
           <button class="review-form-submit-btn" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+    <!-- Mobile Menu -->
+    <div class="mobile-menu-wrapper">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-btn" type="button">
+          <svg
+            class="mobile-menu-close-btn-icon"
+            width="8"
+            height="8"
+            aria-label="mobile menu close icon"
+          >
+            <use href="/images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-nav-list">
+            <li class="mobile-nav-list-item">
+              <a
+                class="mobile-nav-list-link"
+                href="./index.html"
+                target="_blank"
+                >Studio</a
+              >
+            </li>
+            <li class="mobile-nav-list-item">
+              <a class="mobile-nav-list-link" href="" target="_blank"
+                >Portfolio</a
+              >
+            </li>
+            <li class="mobile-nav-list-item">
+              <a class="mobile-nav-list-link" href="" target="_blank"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <adress class="mobile-contacts">
+          <ul class="mobile-contacts-list">
+            <li class="mobile-contacts-list-item">
+              <a
+                class="mobile-contacts-list-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="mobile-contacts-list-item">
+              <a class="mobile-contacts-list-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </adress>
+        <ul class="mobile-social-list">
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-list-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use></svg
+            ></a>
+          </li>
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-list-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use></svg
+            ></a>
+          </li>
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-list-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use></svg
+            ></a>
+          </li>
+          <li class="mobile-social-list-item">
+            <a class="mobile-social-list-link" href=""
+              ><svg class="mobile-social-list-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use></svg
+            ></a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
