--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
       </div>
     </footer>
     <!-- Modal Window -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -745,13 +745,12 @@
                   height="8"
                   aria-label="checkmark icon"
                 >
-                  <use
-                    href="./images/icons.svg#icon-Property"
-                  ></use></svg></span
-              >I accept the terms and conditions of the
-              <a class="review-form-checkbox-link" href=""
-                >Privacy Policy</a
-              ></label
+                  <use href="./images/icons.svg#icon-Property"></use></svg
+              ></span>
+              <p class="paragrapf-privacy-policy">
+                I accept the terms and conditions of the
+                <a class="review-form-checkbox-link" href="">Privacy Policy</a>
+              </p></label
             >
           </div>
           <button class="review-form-submit-btn" type="submit">Send</button>
@@ -760,7 +759,7 @@
     </div>
     <!-- Mobile Menu -->
     <div class="mobile-menu-wrapper">
-      <div class="container mobile-menu-container">
+      <div class="mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg
             class="mobile-menu-close-btn-icon"
@@ -768,14 +767,14 @@
             height="8"
             aria-label="mobile menu close icon"
           >
-            <use href="/images/icons.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <nav class="mobile-menu-nav">
           <ul class="mobile-nav-list">
             <li class="mobile-nav-list-item">
               <a
-                class="mobile-nav-list-link"
+                class="mobile-nav-list-link accent-mobile"
                 href="./index.html"
                 target="_blank"
                 >Studio</a
@@ -797,44 +796,46 @@
           <ul class="mobile-contacts-list">
             <li class="mobile-contacts-list-item">
               <a
+                class="mobile-contacts-list-link accent-mobile"
+                href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-contacts-list-item">
+              <a
                 class="mobile-contacts-list-link"
                 href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="mobile-contacts-list-item">
-              <a class="mobile-contacts-list-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+          </ul>
+          <ul class="mobile-social-list">
+            <li class="mobile-social-list-item">
+              <a class="mobile-social-list-link" href=""
+                ><svg class="mobile-social-list-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="mobile-social-list-item">
+              <a class="mobile-social-list-link" href=""
+                ><svg class="mobile-social-list-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="mobile-social-list-item">
+              <a class="mobile-social-list-link" href=""
+                ><svg class="mobile-social-list-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="mobile-social-list-item">
+              <a class="mobile-social-list-link" href=""
+                ><svg class="mobile-social-list-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
         </adress>
-        <ul class="mobile-social-list">
-          <li class="mobile-social-list-item">
-            <a class="mobile-social-list-link" href=""
-              ><svg class="mobile-social-list-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use></svg
-            ></a>
-          </li>
-          <li class="mobile-social-list-item">
-            <a class="mobile-social-list-link" href=""
-              ><svg class="mobile-social-list-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use></svg
-            ></a>
-          </li>
-          <li class="mobile-social-list-item">
-            <a class="mobile-social-list-link" href=""
-              ><svg class="mobile-social-list-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use></svg
-            ></a>
-          </li>
-          <li class="mobile-social-list-item">
-            <a class="mobile-social-list-link" href=""
-              ><svg class="mobile-social-list-icons" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use></svg
-            ></a>
-          </li>
-        </ul>
       </div>
     </div>
   </body>
